[package]
name = "kraglin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.6"
dashu-int = { version = "0.4", default-features = false, features = ["std", "serde"] }
decorum = "0.3"
educe = { version = "0.5", default-features = false, features = ["Hash"] }
generic-tests = { version = "0.1", features = ["test-tokio"] }
serde = { version = "1", features = ["derive"] }
smol_str = { version = "0.2", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
