[package]
name = "kraglin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.6"
color-eyre = "0.6.3"
dashu-int = { version = "0.4", default-features = false, features = ["std", "serde"] }
decorum = "0.3"
generic-tests = { version = "0.1", features = ["test-tokio"] }
serde = { version = "1", features = ["derive"] }
smol_str = { version = "0.2", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
